--- a/public/css/global.css
+++ b/public/css/global.css
@@ -30,6 +30,19 @@ body {
   margin-top: 50%;
 }
 
+.rotate {
+  animation: rotate 5s infinite linear(0 0%, 1 100%);
+  transform-origin: 50% 50%;
+}
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+
 @keyframes blur-anim {
   from {
     width: 212px;
