--- a/public/css/global.css
+++ b/public/css/global.css
@@ -30,7 +30,11 @@ body {
   transform: translateY(-50%);
   margin-top: 50%;
 }
-
+.center-xy {
+  transform: translate(-50%, -50%);
+  margin-top: 50%;
+  margin-left: 50%;
+}
 .rotate {
   animation: rotate 5s infinite linear(0 0%, 1 100%);
   transform-origin: 50% 50%;
@@ -64,4 +68,15 @@ body {
   to {
     background-position-x: -200%;
   }
+}
+
+.full-page-shadow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  z-index: 9999;
 }
